--- a/mod2_Assignment/index.html
+++ b/mod2_Assignment/index.html
@@ -8,17 +8,28 @@
 
     <h1 >Our Menu</h1>
 
-    <div class="container"> Chicken
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="container">
+      <span>Chicken</span>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
     </div>
+      </div>
 
-    <div class="container" > Beef
+      <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="container" >
+     <span>beef</span>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
     </div >
-
-    <div class="container"> Sushi
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
     </div>
 
+      <div class="col-lg-4 col-md-12 col-sm-12">
+    <div class="container">
+      <span>Sushi</span>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
+    </div>
+    </div>
+
+    </div>
   </body>
 </html>
