changed colors and completed the project

--- a/mod2_Assignment/index.html
+++ b/mod2_Assignment/index.html
@@ -11,21 +11,21 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 col-sm-12">
     <div class="container">
-      <span>Chicken</span>
+      <span id="pink">Chicken</span>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
     </div>
       </div>
 
       <div class="col-lg-4 col-md-6 col-sm-12">
     <div class="container" >
-     <span>beef</span>
+     <span id="red">beef</span>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
     </div >
     </div>
 
       <div class="col-lg-4 col-md-12 col-sm-12">
     <div class="container">
-      <span>Sushi</span>
+      <span id="yellow">Sushi</span>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
     </div>
     </div>
